[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/spikes.png" type="Texture" id=2]
[ext_resource path="res://enemies/death_zone.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/spikes.gd" type="Script" id=4]
[ext_resource path="res://player/player_future_shader.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.06537, 4.42028 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.175, 24 )

[sub_resource type="Animation" id=3]
resource_name = "activate"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("spike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 17 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "deactivate"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("spike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 17 ) ]
}

[node name="spikes" type="Node2D"]
material = ExtResource( 5 )
script = ExtResource( 4 )

[node name="spike" type="Node2D" parent="."]
use_parent_material = true

[node name="sprite" type="Sprite" parent="spike"]
use_parent_material = true
texture = ExtResource( 2 )

[node name="death_zone" parent="spike" instance=ExtResource( 3 )]

[node name="shape" parent="spike/death_zone" index="0"]
position = Vector2( 0, 1.41901 )
shape = SubResource( 1 )

[node name="trigger_zone" parent="." instance=ExtResource( 1 )]

[node name="shape" parent="trigger_zone" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="show_time" type="Timer" parent="."]
wait_time = 2.0

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 3 )
anims/deactivate = SubResource( 4 )

[node name="audio" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="spike/death_zone" to="." method="_on_death_zone_area_entered"]
[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]
[connection signal="timeout" from="show_time" to="." method="_on_show_time_timeout"]
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]

[editable path="spike/death_zone"]
[editable path="trigger_zone"]
